OLD/kubernetes-cluster/letsencrypt/ingress-demo6.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo6-le-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
spec:
  ingressClassName: nginx
  tls:
    - secretName: demo6-ssl
      hosts:
      - demo6.vps-2.cluster-4.de               
  rules:
  - host: "demo6.vps-2.cluster-4.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: hello-service
              port:
                number: 80
